fixed menu z-index

--- a/public/css/menu.less
+++ b/public/css/menu.less
@@ -5,6 +5,7 @@
     background:@dark;
     color:white;
     height:100vh;
+    z-index:2;
 
     div#menu-contents {
         margin:20px;
